--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Hello World
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>louisaturn</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+
+    <!-- css -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./css/parallax-star-background.css">
+    <link rel="stylesheet" href="./css/frosted-glass-effect.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lora'><link rel="stylesheet" href="./css/icons.css">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
+    <link rel="stylesheet" href="./css/thread.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+</head>
+
+<canvas id="waves"></canvas>
+
+<body>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+
+    <div class="arruma">
+        <div class="user-icon"></div>
+        <div class="blurred-box">
+            <div class="text">
+                <h1>Loui</h1>
+                <p>I am a brazilian B.S. in Computational Mathematics. I like computer science, mathematical modeling, differential equations and linear algebra applications. I also love arts, coding, bad movies and silly family-friendly jokes. </p>
+                <p>I am currently an software developer (at Federal University of Minas Gerais' Computer Science Department + Public Ministery of Minas Gerais), while posting my amateur art (@ise.artes). I am always making some small projects, learning new tecnologies and trying new art mediums.</p>
+            </div>
+            <ul class="social-networks bounce">
+                <li><a href="https://www.linkedin.com/in/louise-saturnino/" class="icon-linkedin">LinkedIn</a></li>
+                <li><a href="https://github.com/louisaturn" class="icon-github">GitHub</a></li>
+                <li><a href="https://www.instagram.com/ise.artes/" class="icon-instagram">Instagram</a></li>
+            </ul>
+        </div>
+    </div>
+
+
+<script type="text/javascript">
+
+    <!-- scripts -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="./js/thread.js"></script>
+</body>
+
+</html>
