texto, imagem, versão zoada 2

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="text">
                 <h1>Loui</h1>
                 <p>I am a brazilian B.S. in Computational Mathematics. I like computer science, mathematical modeling, differential equations and linear algebra applications. I also love arts, coding, bad movies and silly family-friendly jokes. </p>
-                <p>I am currently an software developer (at Federal University of Minas Gerais' Computer Science Department + Public Ministery of Minas Gerais), while posting my amateur art (@ise.artes). I am always making some small projects, learning new tecnologies and trying new art mediums.</p>
+                <p>I am currently a software developer (at Federal University of Minas Gerais' Computer Science Department + Public Ministery of Minas Gerais), while posting my amateur art (@ise.artes). I am always making some small projects, learning new tecnologies and trying new art mediums.</p>
             </div>
             <ul class="social-networks bounce">
                 <li><a href="https://www.linkedin.com/in/louise-saturnino/" class="icon-linkedin">LinkedIn</a></li>
